<resources>
    <string name="app_name">Raia</string>
    <string name="sign_up">Sign Up.</string>
    <string name="sign_in">Sign In.</string>
    <string name="lets_get_you_an_account">Lets get you an account.</string>
    <string name="your_name">Your Name.</string>
    <string name="next">next.</string>
    <string name="nice_next_your_email_address">Nice! next, your email address.</string>
    <string name="your_email">Your Email.</string>
    <string name="great_next_you_ll_need_a_password">"Great! Next, you\'ll need a password. Your password must be at least 6 characters."</string>
    <string name="your_new_password">Your New Password.</string>
    <string name="retype_that_new_password_please">Retype that new password, please.</string>
    <string name="retype_that_password">Retype that password.</string>
    <string name="no_internet_connection">You\'ll need an internet connection to continue.</string>
    <string name="lets_get_you_signed_in">Lets get you signed in.</string>
    <string name="and_your_password">And your password.</string>
    <string name="your_password">Your Password.</string>
    <string name="finish">FINISH</string>
    <string name="log_in">LOG IN</string>
    <string name="something_went_wrong">Something went wrong, just retry in a few moments.</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here.</string>
    <string name="have_an_account_sign_in_here">Have an account? Sign in here.</string>
    <string name="failed_sign_in">That didn\'t work, check what you\'ve typed in and retry.</string>
    <string name="youll_need_a_password">You\'ll need a password.</string>
    <string name="your_password_needs_to_be_at_least_6_characters">Your password needs to be at least 6 characters</string>
    <string name="you_cant_use_that_as_a_password">You can\'t use that as a password.</string>
    <string name="password_must_be_strong">The password must contain at least 6 AlphaNumeric characters(numbers and letters, one being uppercase), and 1 Special Character.</string>
    <string name="upload_post">Upload Post.</string>
    <string name="post_type">Post Type.</string>
    <string name="pleas_pick_the_type_of_post_your_uploading">Please pick the type of post your uploading.</string>
    <string name="announcement">Announcement.</string>
    <string name="poll">Poll.</string>
    <string name="petition">Petition.</string>
    <string name="announcement_details">Announcement Details.</string>
    <string name="upload">Upload.</string>
    <string name="just_describe_what_your_announcing_and_a_photo_to_go_with_it">Just describe what your announcing and a photo to go with it.</string>
    <string name="whats_the_big_announcement">Whats the big announcement?</string>
    <string name="poll_details">Poll Details.</string>
    <string name="describe_a_poll_question_for_users_to_decide_and_the_options_to_choose">Describe a poll question for users to decide and the options to choose.</string>
    <string name="poll_question">Poll question…</string>
    <string name="type_option">Type Option.</string>
    <string name="poll_options">Poll Options.</string>
    <string name="petition_details">Petition Details.</string>
    <string name="describe_what_your_petition_is_about_and_a_photo_to_go_along_with_it">Describe what your petition is about and a photo to go along with it.</string>
    <string name="what_s_the_petition_about">What\'s the petition about?</string>
    <string name="gallery">Gallery.</string>
    <string name="youll_need_to_add_this">You\'ll need to add this.</string>
    <string name="youll_need_to_add_an_image">Please set an image before doing that.</string>
    <string name="upload_success">Upload Success.</string>
    <string name="your_post_has_been_uploaded">Your post has been uploaded!</string>
    <string name="maximum_of_4_poll_options_is_allowed">Maximum of 4 poll options is allowed.</string>
    <string name="youll_need_to_add_an_option">You need to add at least 2 poll options.</string>
    <string name="camera">Camera.</string>
    <string name="your_county">Your County.</string>
    <string name="search_a_county">Search A County…</string>
    <string name="your_feed">Your feed.</string>
    <string name="number_of_signatures_targeted">Number of signatures targeted.</string>
    <string name="polls">Polls.</string>
    <string name="petitions">Petitions.</string>
    <string name="add_a_comment">Add a comment.</string>
    <string name="say_something">Say something!</string>
    <string name="cancel">Cancel.</string>
    <string name="reply">Reply.</string>
    <string name="messages">Messages.</string>
    <string name="your_account">Your Account.</string>
    <string name="feedback">Feedback.</string>
    <string name="zero_votes">0 Votes</string>
    <string name="one_vote">1 Vote</string>
    <string name="votes">" Votes"</string>
    <string name="empty">Empty</string>
    <string name="add_a_reply">Add a reply</string>
    <string name="filter_the_posts_you_see_based_on_the_county_you_reside_in">Filter the posts you see based on the county you reside in.</string>
    <string name="set_the_county_you_preside_in">Set the County you Preside in.</string>
    <string name="preferred_county">Preferred County.</string>
    <string name="set_the_language_you_prefer">Set the language you prefer.</string>
    <string name="preferred_language">Preferred Language.</string>
    <string name="your_profile_photo">Your Profile Photo.</string>
    <string name="set_your_image_avatar">Set your image avatar.</string>
    <string name="check_out_what_you_have_posted_here">Check out what you have posted here.</string>
    <string name="your_posts">Your Posts.</string>
    <string name="app_version">App Version.</string>
    <string name="copyright_2019_color_corporation">© Copyright 2019, Color Corporation.</string>
    <string name="change_your_profile_photo">Change Your Profile Photo.</string>
    <string name="you_can_choose_to_use_your_camera_take_from_your_saved_photos_or_delete_your_current_one">You can choose to use your camera, take from your saved photos or delete your current one.</string>
    <string name="use_camera">Use Camera.</string>
    <string name="choose_photo">Choose Photo.</string>
    <string name="remove_photo">Remove Photo.</string>
    <string name="acc_created_on">Account Created On: %d %s %d</string>
    <string name="you_may_set_your_preferred_language_to_have_in_the_app">You may set your preferred Language to have in the app.</string>
    <string name="set">Set.</string>
    <string name="language_set">%s set.</string>
    <string name="you_can_set_your_preferred_county_of_residense">You can set your preferred County of residense.</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="sign_out_of_your_account">Sign Out of your Account.</string>
    <string name="yes">Yes.</string>
    <string name="logout">Logout.</string>
    <string name="all_your_posts">All Your Posts.</string>
    <string name="find_someone">Find someone.</string>
    <string name="no_results">No results.</string>
    <string name="results_found">%d results found</string>
    <string name="chats">Chats.</string>
    <string name="done">Done.</string>
    <string name="signed">%d signed</string>
    <string name="post_will_be_loaded_to_your_preferred_county">Post will be uploaded to %s, your preferred County.</string>
    <string name="please_pick_the_county_you_reside_in">Please pick the county you reside in.</string>
    <string name="pick_your_preferred_county">Pick Your Preferred County.</string>
    <string name="language">Language.</string>
    <string name="please_pick_a_language_you_prefer_to_use">Please pick a language you prefer to use.</string>
</resources>
