<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteish2"
    tools:context=".Activities.ChatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_height="match_parent">

            <!--Top title and settings icon-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/userImageView"
                    android:visibility="invisible"
                    android:alpha="0"
                    android:layout_width="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/grey_back"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/ChatTitle"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:translationX="-35dp"
                    android:text="@string/chats"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <!--Search bar part-->
            <LinearLayout
                android:id="@+id/searchBarPartRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="@color/greyish"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="0dp"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/searchUserEditText"
                            android:layout_width="match_parent"
                            android:background="@color/white"
                            android:visibility="visible"
                            android:inputType="text"
                            android:hint="@string/find_someone"
                            android:padding="10dp"
                            android:textSize="12sp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/searchSomethingTextView"
                            android:layout_width="match_parent"
                            android:background="@color/greyish"
                            android:textSize="13sp"
                            android:padding="10dp"
                            android:text="@string/find_someone"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/existingUsersCardView"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    app:cardCornerRadius="14dp"
                    android:layout_marginTop="10dp"
                    app:cardElevation="0dp"
                    android:layout_height="200dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/resultsNumberTextView"
                                android:layout_width="match_parent"
                                android:textSize="13sp"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="10dp"
                                android:text="@string/no_results"
                                android:layout_height="wrap_content"/>

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/searchedUsersRecyclerView"
                                android:layout_width="match_parent"
                                android:layout_marginRight="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_height="match_parent"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/noFoundUsersTextView"
                            android:layout_width="wrap_content"
                            android:textSize="15sp"
                            android:layout_centerInParent="true"
                            android:text="@string/empty"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/chatsRecyclerView"
                android:layout_width="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/noChatsTextView"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:paddingTop="30dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:text="@string/empty"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/progressBarRelativeLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                style="?android:attr/progressBarStyle"
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp"/>

        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/textChatViewPager"
            android:layout_width="match_parent"
            android:layout_marginTop="68dp"
            android:visibility="gone"
            android:alpha="0"
            android:layout_height="match_parent">


        </android.support.v4.view.ViewPager>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>